airflow-docker/logs/hook_dag/transfer_xml/2022-04-19T13:49:11.820790+00:00/1.log
[2022-04-19 13:49:19,486] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: hook_dag.transfer_xml manual__2022-04-19T13:49:11.820790+00:00 [queued]>
[2022-04-19 13:49:19,496] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: hook_dag.transfer_xml manual__2022-04-19T13:49:11.820790+00:00 [queued]>
[2022-04-19 13:49:19,496] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-04-19 13:49:19,496] {taskinstance.py:1244} INFO - Starting attempt 1 of 2
[2022-04-19 13:49:19,496] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-04-19 13:49:19,504] {taskinstance.py:1264} INFO - Executing <Task(Postgres2File): transfer_xml> on 2022-04-19 13:49:11.820790+00:00
[2022-04-19 13:49:19,508] {standard_task_runner.py:52} INFO - Started process 14909 to run task
[2022-04-19 13:49:19,510] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'hook_dag', 'transfer_xml', 'manual__2022-04-19T13:49:11.820790+00:00', '--job-id', '424', '--raw', '--subdir', 'DAGS_FOLDER/hook_dag.py', '--cfg-path', '/tmp/tmpfhsfmzh8', '--error-file', '/tmp/tmpxt8kd5z6']
[2022-04-19 13:49:19,511] {standard_task_runner.py:77} INFO - Job 424: Subtask transfer_xml
[2022-04-19 13:49:19,556] {logging_mixin.py:109} INFO - Running <TaskInstance: hook_dag.transfer_xml manual__2022-04-19T13:49:11.820790+00:00 [running]> on host 22e04adb6bfa
[2022-04-19 13:49:19,595] {taskinstance.py:1431} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=hook_dag
AIRFLOW_CTX_TASK_ID=transfer_xml
AIRFLOW_CTX_EXECUTION_DATE=2022-04-19T13:49:11.820790+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-04-19T13:49:11.820790+00:00
[2022-04-19 13:49:19,601] {base.py:79} INFO - Using connection to: id: postgres_default. Host: postgres, Port: 5432, Schema: ***, Login: ***, Password: ***, extra: {}
[2022-04-19 13:49:19,657] {taskinstance.py:1282} INFO - Marking task as SUCCESS. dag_id=hook_dag, task_id=transfer_xml, execution_date=20220419T134911, start_date=20220419T134919, end_date=20220419T134919
[2022-04-19 13:49:19,723] {local_task_job.py:154} INFO - Task exited with return code 0
[2022-04-19 13:49:19,749] {base.py:79} INFO - Using connection to: id: postgres_default. Host: postgres, Port: 5432, Schema: ***, Login: ***, Password: ***, extra: {}
[2022-04-19 13:49:19,751] {dbapi.py:225} INFO - Running statement: ./sql/log_success.sql, parameters: None
[2022-04-19 13:49:19,764] {taskinstance.py:1590} ERROR - Error when executing on_success_callback
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1588, in _run_finished_callback
    task.on_success_callback(context)
  File "/opt/airflow/dags/hook_dag.py", line 88, in task_success_log
    return log_end.execute(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 71, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "."
LINE 1: ./sql/log_success.sql
        ^

[2022-04-19 13:49:19,776] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
